@@ -46,3 +46,4 @@ $lang['btn_title_dw_fb'] = "Save and close the editor and switch to the DW Fileb
 $lang['btn_title_ckg_fb'] = "Save and close the editor and switch to the CKG Filebrowser";
 $lang['formatdel'] = 'Markup removed from headers(s): not supported by Dokuwiki';
 $lang["fontdel"] ='Font Markup removed from link(s): not supported by Dokuwiki';
+$lang["ckgcke_conflict"] ='A copy of ckgedit has been detected.  Either ckgdoku or ckgedit must be disabled.';
