@@ -1,4 +1,4 @@
-rev_17-Mar_21-19_08
+rev_17-Mar_22-14_05
 
 Switched dafault filebrowser settings to all and ckgedit
 
@@ -13,3 +13,6 @@ remove backslashes from ends of blockquote
 
 Mar 21
 Converted all uses of ckgedit to ckgdoku in code; now it loads as plugin ckgdoku
+
+Mar 22
+ckgedit/ckgdoku warning: one must be disabled (metq.php)
